# mementoAI_test

./: .env  .gitignore  DATABASE_URL.env  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1f979fe85af4_initial_migration.py  23771ec52585_initial_migration.py  4cd7fd2d259b_create_urls_table.py  8e45dd766b4f_initial_migration.py
app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
tests/: test_crud.py  test_main.py
